--- a/index.html
+++ b/index.html
@@ -1,34 +1,76 @@
 <!DOCTYPE html>
 <html>
+ <head>
 
-  <head>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script type="script.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+   <script type="text/javascript" src="script.js"></script>
 
+   <link rel="stylesheet" href="homepage/style.css"/>
+  </head>
   <body>
 
-   <h1>Wish I Was Here
+   <h1>Wish I Was Here</h1>
+
+  <!--CC image, Neues Schloss Schlossplatzspringbrunnen Schlossplatz,  Stuttgart https://upload.wikimedia.org/wikipedia/commons/e/e1/Neues_Schloss_Schlossplatzspringbrunnen_Schlossplatz_Stuttgart_2015_01.jpg --> 
+   <img src="images/image_top.jpg" alt="Neues Schloss Schlossplatzspringbrunnen Schlossplatz, Stuttgart" style="width:600px; height:400px;">
    </h1>
 
-   <h2><img src="https://c1.staticflickr.com/3/2621/3801987960_eb681a8c56_b.jpg"> 
-   </h2>
+    <p> I love plane rides. They end with me seeing somewhere new or returning from a journey to savor the memories of where I've been. Sadly, I cannot travel every day or month so I can't see all of the wonders the world has to offer. Until then, here are some of the places I wish I could see. 
 
-  </head>
+    </p>
 
-    <h3> I love plane rides. They end with me seeing somewhere new or returning from a journey to savor the memories of where I've been. Sadly, I cannot travel every day or month so I can't see all of the wonder the world has to offer. Until then, here are some of the places I wish I could see. 
+    <p>Thankfully, I will get to see a few of these in September:
 
-    </h3>
+    <title>Button Magic</title>
+        <link rel='stylesheet' type='text/css' href='stylesheet.css'/>   
+  
+   <div class="slidewhow">
 
-    <h3> Thankfully, I will get to see some new places in September.
-    </h3>
+     <div class="mypics fade">
+     <img src="images/HohenzollernCastle.jpg" style="width:600px; height:400px;">
+     <div class="text">Germany</div>
+     </div>
 
-    <ol> 
+     <div class="mypics fade">
+     <img src="images/VeniceCanal.jpg" style="width:600pm; height:400px;">
+     <div class="text"> Italy</div>
+     </div>
+
+     <div class="mypics fade">
+     <img src="images/Viennacity.jpg" style="width:600; height:400px;">
+     <div class="text">Austria</div>
+     </div>
+
+     <div class="mypics fade">
+     <img src="images/lighthouse-marseille-france.jpg" style="width:600px; height:400px;">
+     <div class="text">France</div>
+     </div>
+
+     <div style="text-align:center">
+       <span onclick="currentSlide(1)"></span>
+       <span onclick="currentSlide(2)"></span>
+       <span onclick="currentSlide(3)"></span>
+       <span onclick="currentSlide(4)"></span>
+       </div>
+   </div>
+
+
+    </p>
+
+    <div class="countries">
+      <ol> 
+    <!-- CC image, Hohenzollern Castle, https://www.flickr.com/photos/trodel/3801987960-->
       <li>Stuttgart, Germany</li>
+    <!--CC image, canal in Venice, Italy, https://pixabay.com/p-1209808/?no_redirect  --> 
       <li>Venice, Italy</li>
+    <!-- CC image, Vienna in the evening, https://pixabay.com/p-933500/?no_redirect -->
       <li>Vienna, Austria</li>
-      <li>Merceille, France</li>
-    </ol>
-
+    <!-- CC from https://www.goodfreephotos.com/albums/france/marseille/lighthouse-under-sky-and-clouds-marseille-france.jpg, Lighthouse Under sky and clouds -->
+      <li>Marseille, France</li>
+      </ol>
+    </div>
   
   
 </body>
